# kiss3d

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  Makefile  README.md  WGPU_MIGRATION.md  _config.yml  build.rs  ci.sh  index.html  index.md  oculus_fragment_shader.glsl  params.json  rustfmt.toml
.cargo/: config.toml
.circleci/: config.yml
.github/workflows/: build.yml
.run/: README.md  add_remove (web).run.xml  add_remove.run.xml  camera (web).run.xml  camera.run.xml  check (wasm).run.xml  check.run.xml  clippy.run.xml  cube (web).run.xml  cube.run.xml  custom_material (web).run.xml  custom_material.run.xml  custom_mesh (web).run.xml  custom_mesh.run.xml  custom_mesh_shared (web).run.xml  custom_mesh_shared.run.xml  decomp (web).run.xml  decomp.run.xml  event (web).run.xml  event.run.xml  group (web).run.xml  group.run.xml  instancing2d (web).run.xml  instancing2d.run.xml  instancing3d (web).run.xml  instancing3d.run.xml  lines (web).run.xml  lines.run.xml  mouse_events (web).run.xml  mouse_events.run.xml  multi_windows (web).run.xml  multi_windows.run.xml  obj (web).run.xml  obj.run.xml  persistent_point_cloud (web).run.xml  persistent_point_cloud.run.xml  planar_lines (web).run.xml  planar_lines.run.xml  points (web).run.xml  points.run.xml  (+31 more)
ci/: build.sh
doc/: search-index.js
doc/color_quant/: index.html  struct.NeuQuant.html
doc/enum_primitive/: enum.Option.html  trait.FromPrimitive.html
doc/flate2/: enum.Compression.html  enum.Flush.html  enum.Status.html  index.html  sidebar-items.js  struct.Compress.html  struct.DataError.html  struct.Decompress.html  struct.GzBuilder.html  struct.GzHeader.html  trait.FlateReadExt.html  trait.FlateWriteExt.html
doc/freetype/: index.html  sidebar-items.js  stability.html  stability.json  type.BBox.html  type.GlyphMetrics.html  type.Matrix.html  type.Vector.html
doc/freetype_sys/: constant.FT_ENCODING_ADOBE_CUSTOM.html  constant.FT_ENCODING_ADOBE_EXPERT.html  constant.FT_ENCODING_ADOBE_LATIN_1.html  constant.FT_ENCODING_ADOBE_STANDARD.html  constant.FT_ENCODING_APPLE_ROMAN.html  constant.FT_ENCODING_BIG5.html  constant.FT_ENCODING_GB2312.html  constant.FT_ENCODING_JOHAB.html  constant.FT_ENCODING_MS_BIG5.html  constant.FT_ENCODING_MS_GB2312.html  constant.FT_ENCODING_MS_JOHAB.html  constant.FT_ENCODING_MS_SJIS.html  constant.FT_ENCODING_MS_SYMBOL.html  constant.FT_ENCODING_MS_WANSUNG.html  constant.FT_ENCODING_NONE.html  constant.FT_ENCODING_OLD_LATIN_2.html  constant.FT_ENCODING_SJIS.html  constant.FT_ENCODING_UNICODE.html  constant.FT_ENCODING_WANSUNG.html  constant.FT_Err_Array_Too_Large.html  constant.FT_Err_Bad_Argument.html  constant.FT_Err_Bbx_Too_Big.html  constant.FT_Err_CMap_Table_Missing.html  constant.FT_Err_Cannot_Open_Resource.html  constant.FT_Err_Cannot_Open_Stream.html  constant.FT_Err_Cannot_Render_Glyph.html  constant.FT_Err_Code_Overflow.html  constant.FT_Err_Corrupted_Font_Glyphs.html  constant.FT_Err_Corrupted_Font_Header.html  constant.FT_Err_Could_Not_Find_Context.html  constant.FT_Err_Debug_OpCode.html  constant.FT_Err_Divide_By_Zero.html  constant.FT_Err_ENDF_In_Exec_Stream.html  constant.FT_Err_Execution_Too_Long.html  constant.FT_Err_Hmtx_Table_Missing.html  constant.FT_Err_Horiz_Header_Missing.html  constant.FT_Err_Ignore.html  constant.FT_Err_Invalid_Argument.html  constant.FT_Err_Invalid_Cache_Handle.html  constant.FT_Err_Invalid_CharMap_Format.html  (+321 more)
doc/gif/: enum.Block.html  enum.ColorOutput.html  enum.Decoded.html  enum.DecodingError.html  enum.DisposalMethod.html  enum.Extension.html  enum.ExtensionData.html  enum.Extensions.html  enum.Repeat.html  index.html  struct.Decoder.html  struct.Encoder.html  struct.Frame.html  struct.MemoryLimit.html  struct.Reader.html  struct.StreamingDecoder.html  trait.Parameter.html  trait.SetParameter.html
doc/gl/: constant.ACTIVE_ATOMIC_COUNTER_BUFFERS.html  constant.ACTIVE_ATTRIBUTES.html  constant.ACTIVE_ATTRIBUTE_MAX_LENGTH.html  constant.ACTIVE_PROGRAM.html  constant.ACTIVE_RESOURCES.html  constant.ACTIVE_SUBROUTINES.html  constant.ACTIVE_SUBROUTINE_MAX_LENGTH.html  constant.ACTIVE_SUBROUTINE_UNIFORMS.html  constant.ACTIVE_SUBROUTINE_UNIFORM_LOCATIONS.html  constant.ACTIVE_TEXTURE.html  (+3309 more)
examples/: Cargo.toml  add_remove.rs  camera.rs  cube.rs  cube_map.rs  custom_material.rs  custom_mesh.rs  custom_mesh_shared.rs  decomp.rs  event.rs  group.rs  image.rs  instancing.rs  instancing2d.rs  instancing3d.rs  instancing_wasm2d.rs  instancing_wasm3d.rs  lines.rs  mouse_events.rs  multi_windows.rs  obj.rs  persistent_point_cloud.rs  planar_lines.rs  points.rs  post_processing.rs  primitives.rs  primitives2d.rs  primitives_scale.rs  procedural.rs  quad.rs  recording.rs  rectangle.rs  relativity.rs  screenshot.rs  stereo.rs  text.rs  texturing.rs  texturing_mipmaps.rs  ui.rs  window.rs  (+1 more)
examples/cube/: Cargo.toml
examples/cube/src/: main.rs
examples/media/rust_logo/: rust_logo.mtl
examples/media/teapot/: default.mtl
examples/primitives/: Cargo.toml
examples/primitives/src/: main.rs
examples/rectangle/: Cargo.toml
examples/rectangle/src/: main.rs
examples/text/: Cargo.toml
examples/text/src/: main.rs
examples/wasm/: Cargo.toml  README.md  index.html  index.js  package.json  webpack.config.js
examples/wasm/src/: lib.rs  main.rs
examples/wasm/static/: index.html
gui/conrod/: Cargo.toml
gui/conrod/examples/: ui.rs
gui/conrod/src/: conrod_renderer.rs  lib.rs
gui/iced/: Cargo.toml
gui/iced/examples/demo/: controls.rs  main.rs
gui/iced/src/: backend.rs  lib.rs  text.rs
kiss3d-macro/: Cargo.toml  README.md
kiss3d-macro/src/: lib.rs
src/: arc_ball.rs  camera.rs  error.rs  event.rs  first_person.rs  gpu_vector.rs  kiss3d.rc  lib.rs  light.rs  line_renderer.rs  lines_manager.rs  mesh.rs  mtl.rs  obj.rs  object.rs  planar_line_renderer.rs  planar_lines.wgsl  point_renderer.rs  shaders.rs  shaders_manager.rs  vertices.rs  window.rs
ui/conrod/: Cargo.toml
ui/conrod/examples/: ui_conrod.rs
ui/conrod/src/: conrod_renderer.rs  lib.rs
(+6518 files in other folders)
