[package]
authors = ["Sébastien Crozet <developer@crozet.re>"]
name    = "kiss3d"
version = "0.36.0"

autoexamples = true
description  = "Keep it simple, stupid, 2D and 3D graphics engine for Rust."
edition      = "2018"
keywords     = ["3D", "graphics", "OpenGL", "KISS"]
license      = "BSD-3-Clause"
readme       = "README.md"
repository   = "https://github.com/sebcrozet/kiss3d"

include = [
    "src/**/*.rs",
    "src/**/*.wgsl",
    "src/text/*.ttf",
    "examples/**/*.rs",
    "examples/media",
    "examples/Cargo.toml",
    "Cargo.toml",
    "LICENSE",
    "Readme.md",
]


[lib]
name = "kiss3d"
path = "src/lib.rs"

[features]
conrod = ["conrod_core"]
vertex_index_u32 = []

[dependencies]
bitflags     = "1.2"
conrod_core  = { version = "0.71", features = ["wasm-bindgen"], optional = true }
either       = "1"
wgpu         = { version = "0.17", features = ["webgl"] }
winit        = "0.28"
image        = "0.24"
instant      = { version = "0.1", features = ["wasm-bindgen"] }
libc         = "0.2"
nalgebra     = "0.30"
ncollide3d   = "0.33"
num-traits   = "0.2"
rusttype     = { version = "0.8.3", features = ["gpu_cache"] }
serde        = "1"
serde_derive = "1"
pollster     = "0.3"

# We repeat all three targets instead of any(target_arch = "wasm32", target_arch = "asmjs")
# to avoid https://github.com/koute/stdweb/issues/135
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Window",
    "HtmlCanvasElement",
    "Navigator",
    "WorkerGlobalScope",
    "WorkerNavigator",
    "TouchEvent",
    "Touch",
    "TouchList",
    "WheelEvent",
    "KeyboardEvent",
    "MouseEvent",
] }

[dev-dependencies]
env_logger = "0.10"
nalgebra   = { version = "0.30", features = ["rand"] }
ncollide2d = "0.33"
rand       = "0.8"
