[package]
authors = ["Sébastien Crozet <developer@crozet.re>"]
name    = "kiss3d"
version = "0.36.0"

autoexamples = true
description  = "Keep it simple, stupid, 2D and 3D graphics engine for Rust."
edition      = "2018"
keywords     = ["3D", "graphics", "OpenGL", "KISS"]
license      = "BSD-3-Clause"
readme       = "README.md"
repository   = "https://github.com/sebcrozet/kiss3d"

include = [
    "src/**/*.rs",
    "src/**/*.frag",
    "src/**/*.vert",
    "src/text/*.ttf",
    "examples/**/*.rs",
    "examples/media",
    "examples/Cargo.toml",
    "Cargo.toml",
    "LICENSE",
    "Readme.md",
]


[lib]
name = "kiss3d"
path = "src/lib.rs"

[features]
egui = ["dep:egui", "dep:egui_glow"]
vertex_index_u32 = []

[dependencies]
bitflags     = "1.2"
# TODO: widgets are no longer visible if we bump to 0.33. Needs to be investigated.
egui         = { version = "0.32", optional = true, default-features = true }
egui_glow    = { version = "0.32", optional = true }
glow         = "0.16"
either       = "1"
image        = "0.25"
instant      = { version = "0.1", features = ["wasm-bindgen"] }
kiss3d-macro = { version = "0.36.0", path = "kiss3d-macro" }
libc         = "0.2"
nalgebra     = "0.34"
parry3d      = "0.25"
num-traits   = "0.2"
rusttype     = { version = "0.8.3", features = ["gpu_cache"] }
serde        = "1"
serde_derive = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.26"
pollster = "0.4.0"

# We repeat all three targets instead of any(target_arch = "wasm32", target_arch = "asmjs")
# to avoid https://github.com/koute/stdweb/issues/135
[target.wasm32-unknown-unknown.dependencies]
oneshot = "0.1"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3", features = [
    "console",
    "KeyEvent",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
    "HtmlCanvasElement",
    "HtmlElement",
    "Window",
    "UiEvent",
    "Event",
    "EventTarget",
    "Element",
    "DomRect",
] }

[dev-dependencies]
env_logger = "0.10"
nalgebra   = { version = "0.34", features = ["rand"] }
parry2d    = "0.25"
rand       = "0.8"