[package]
name    = "kiss3d-examples"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

[dependencies]
rand = "*"
nalgebra = "*"
gl = "*"
time = "*"
num = "*"
glfw = "*"
ncollide_procedural = "*"
ncollide_transformation = "*"

[dependencies.kiss3d]
path = ".."

[[bin]]
name = "add_remove"
path = "./add_remove.rs"

[[bin]]
name = "camera"
path = "./camera.rs"

[[bin]]
name = "cube"
path = "./cube.rs"

[[bin]]
name = "custom_material"
path = "./custom_material.rs"

[[bin]]
name = "custom_mesh"
path = "./custom_mesh.rs"

[[bin]]
name = "custom_mesh_shared"
path = "./custom_mesh_shared.rs"

[[bin]]
name = "decomp"
path = "./decomp.rs"

[[bin]]
name = "event"
path = "./event.rs"

[[bin]]
name = "group"
path = "./group.rs"

[[bin]]
name = "lines"
path = "./lines.rs"

[[bin]]
name = "obj"
path = "./obj.rs"

[[bin]]
name = "points"
path = "./points.rs"

[[bin]]
name = "post_processing"
path = "./post_processing.rs"

[[bin]]
name = "primitives"
path = "./primitives.rs"

[[bin]]
name = "primitives_scale"
path = "./primitives_scale.rs"

[[bin]]
name = "procedural"
path = "./procedural.rs"

[[bin]]
name = "quad"
path = "./quad.rs"

[[bin]]
name = "relativity"
path = "./relativity.rs"

[[bin]]
name = "stereo"
path = "./stereo.rs"

[[bin]]
name = "text"
path = "./text.rs"

[[bin]]
name = "texturing"
path = "./texturing.rs"

[[bin]]
name = "window"
path = "./window.rs"

[[bin]]
name = "wireframe"
path = "./wireframe.rs"
