[package]
name = "wasm"
version = "0.1.0"
authors = ["sebcrozet <developer@crozet.re>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = "0.19"
#kiss3d = { path = "../..", features = [ "conrod", "web_sys" ] }
kiss3d = { path = "../..", features = [ "web_sys" ] }
wasm-bindgen = "0.2.58"
web_logger = "0.2.0"
#stdweb = "0.4"
#rand = { version = "0.6", features = [ "stdweb" ] }
